[tool.poetry]
name = "PyOctaveBand"
version = "0.1.0"
description = ""
authors = ["Tri Duc Nguyen <tridnguyen97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0b4"
numpy = "^1.23.4"
scipy = "^1.9.3"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"